# kcor-pipeline

./: .gitignore  CMakeLists.txt  INSTALLATION.in  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  RELEASES.md  configure.sh  kcor_find_ssw_dependencies.pro  kcor_find_ssw_dependencies.sh  kcor_make_docs.pro  linux_configure.sh  mac_configure.sh  notify_release  production_configure.sh
cme_detection/: CMakeLists.txt  README.md  TODO.md  boulder_setup.sh  check_cme_det_realtime.sh  kcor_cme_alert_filename.pro  kcor_cme_alert_heartbeat.pro  kcor_cme_alert_human.pro  kcor_cme_alert_initial.pro  kcor_cme_alert_retract.pro  kcor_cme_alert_summary.pro  kcor_cme_alert_text2file.pro  kcor_cme_annotate_nrgf.pro  kcor_cme_check_list.pro  kcor_cme_create_difference_gif.pro  kcor_cme_current_time.pro  kcor_cme_det_alert.pro  kcor_cme_det_check.pro  kcor_cme_det_common.pro  kcor_cme_det_email.pro  kcor_cme_det_event.pro  kcor_cme_det_find.pro  kcor_cme_det_hpr_gif.pro  kcor_cme_det_measure.pro  kcor_cme_det_movie.pro  kcor_cme_det_parameters__define.pro  kcor_cme_det_parameters_init.pro  kcor_cme_det_rdiff.pro  kcor_cme_det_remap.pro  kcor_cme_det_report.pro  kcor_cme_det_reset.pro  kcor_cme_det_setdate.pro  kcor_cme_det_thresh.pro  kcor_cme_det_threshplot.pro  kcor_cme_det_track.pro  kcor_cme_detection.pro  kcor_cme_detection_job.pro  kcor_cme_expand_datetime.pro  kcor_cme_find_human.pro  kcor_cme_find_latest_difference_images.pro  (+22 more)
cme_detection/sample_json_alerts/: 01.kcor_sample_heartbeat.json  02.kcor_sample_initial_alert.json  03.kcor_sample_human_comment_alert.json  04.kcor_sample_initial_alert.json  05.kcor_sample_summary.json  06.kcor_sample_retracting_alert.json
cme_detection/ssw/: CMakeLists.txt  add_tag.pro  conv_hxt2p.pro  conv_p2a.pro  dummyplots.pro  fitshead2wcs.pro  fix_old_att.pro  get_att.pro  get_fits_par.pro  get_suncenter2.pro  gt_dpe.pro  gt_expmode.pro  is_gdl.pro  outplot.pro  rd_att.pro  readfits.pro  recompile.pro  set_utplot.pro  sswfits_struct.pro  sswstruct_fill.pro  sxt_cen.pro  t_utplot.pro  utplot.pro  wcs_decomp_angle.pro  wcs_inv_proj_ait.pro  wcs_inv_proj_car.pro  wcs_inv_proj_cea.pro  wcs_inv_proj_cyp.pro  wcs_inv_proj_mer.pro  wcs_inv_proj_par.pro  wcs_inv_proj_sfl.pro  wcs_proj_tab.pro
lib/: CMakeLists.txt  mg_acosdb_test.pro  mg_cmdline_tools.dlm.in  mg_dist_tools.dlm.in  strreplace.pro
lib/mysql/: CMakeLists.txt  mg_mysql.c  mg_mysql.dlm.in  mgdbmysql__define.pro
src/: CMakeLists.txt  epochs.cfg  epochs.spec.cfg  kcor_cal_insert.pro  kcor_cal_mean_stddev_2015_mar11-2016_aug09.sav  kcor_cal_mean_stddev_2016_aug10-present.sav  kcor_crash_notification.pro  kcor_dateobs2hst.pro  kcor_dateobs2julian.pro  kcor_decimal_time.pro  kcor_decompose_date.pro  kcor_decompose_time.pro  kcor_eng_insert.pro  kcor_filter_log.pro  kcor_find_code_version.pro.in  kcor_get_route.pro  kcor_getsgs.pro  kcor_hw_insert.pro  kcor_img_insert.pro  kcor_lyotstop.pro  kcor_normalize_datetime.pro  kcor_quality_plot.pro  kcor_run__define.pro  kcor_send_mail.pro  kcor_state.pro  kcor_ut2hst.pro  kcor_verify.pro  kcor_verify_dates.pro  kcor_zipsize.pro
src/calibration/: kcor_angles_mod.pro  kcor_calibration.pro  kcor_check_angles.pro  kcor_check_calibration.pro  kcor_find_latest_cal_files.pro  kcor_make_master_gain.pro  kcor_nc_getattribute.pro  kcor_nc_varid.pro  kcor_plot_calibration.pro  kcor_read_calibration.pro  kcor_read_calibration_text.pro  kcor_reduce_calibration.pro  kcor_reduce_calibration_model.pro  kcor_reduce_calibration_read.pro  kcor_reduce_calibration_read_data.pro  kcor_reduce_calibration_setup_lm.pro  kcor_reduce_calibration_write.pro  kcor_reduce_calibration_write_data.pro  kcor_write_master_gain.pro
src/database/: kcor_cal_insert.pro  kcor_compare_rows.pro  kcor_compare_sw.pro  kcor_db_clearday.pro  kcor_db_nrgfdiff_insert.pro  kcor_dp_insert.pro  kcor_eng_insert.pro  kcor_eng_update.pro  kcor_find_latest_row.pro  kcor_find_latest_sw.pro  kcor_fitsfloat2db.pro  kcor_get_level_id.pro  kcor_hw_insert.pro  kcor_img_insert.pro  kcor_mission_insert.pro  kcor_nrgf_clear.pro  kcor_raw_insert.pro  kcor_sci_insert.pro  kcor_sw_insert.pro  kcordbmysql__define.pro  mlso_obsday_insert.pro  mlso_sgs_insert.pro
src/eod/: dokcor_catalog.pro  kcor_annual_image_scale_plot.pro  kcor_annual_movies.pro  kcor_annulus_gridmeans.pro  kcor_archive.pro  kcor_archive_l0.pro  kcor_archive_l0_wrapper.pro  kcor_archive_l1.pro  kcor_archive_l1_wrapper.pro  kcor_archive_l2.pro  kcor_archive_l2_wrapper.pro  kcor_calc_drift.pro  kcor_catalog.pro  kcor_catalog_file.pro  kcor_check_eod.pro  kcor_clean.pro  kcor_create_animated_gif.pro  kcor_create_animations.pro  kcor_create_averages.pro  kcor_create_differences.pro  kcor_create_mp4.pro  kcor_daily_image_scale_plot.pro  kcor_daily_o1focus_plot.pro  kcor_daily_synoptic_map.pro  kcor_detect_badlines.pro  kcor_enhanced.pro  kcor_eod.pro  kcor_extract_radial_intensity.pro  kcor_find_basefiles.pro  kcor_make_average.pro  kcor_make_diffs.pro  kcor_median_line_image.pro  kcor_median_rowcol_image.pro  kcor_mission_image_scale_plot.pro  kcor_nrgf_diff_movie.pro  kcor_o1focus_plot.pro  kcor_pixels_per_bin.pro  kcor_platescale.pro  kcor_plot_l1.pro  kcor_plot_l2.pro  (+26 more)
src/fileio/: kcor_mkdir.pro  kcor_old_readfits.pro  kcor_read_rawdata.pro  kcor_repair_diffuser_mid2out.pro  kcor_repair_fixmid.pro  kcor_repair_mid2out.pro
src/realtime/: CMakeLists.txt  catalog.pro  datecal.pro  dokcor_catalog.pro  dokcormask.pro  fitcircle.pro  fitellipse.pro  get_date_dir.pro  hvs_gen.pro  jd_carr_long.pro  kcor.dlm  kcor.dlm.in  kcor_apply_dist.pro  kcor_cal_read.pro  kcor_cal_setup.pro  kcor_cal_write.pro  kcor_calgen.pro  kcor_circfit.pro  kcor_compute_platescale.pro  kcor_corona.pro  kcor_correct_camera.pro  kcor_correct_horizontal_artifact.pro  kcor_correct_vertical_artifact.pro  kcor_create_gif.pro  kcor_cropped_gif.pro  kcor_datecal.pro  kcor_display_quicklook.pro  kcor_filter_badlines.pro  kcor_find_badlines.pro  kcor_find_badlines_camera.pro  kcor_find_image.pro  kcor_fix_badpixels.pro  kcor_fshift.pro  kcor_geometry_mask.pro  kcor_get_date_dir.pro  (+31 more)
(+350 files in other folders)
